Upgrade to JDK 11 and Spring Framework 5.1
Currently most tests are broken, not sure why ...